# easydb_app

./: .env  .gitignore  CHANGELOG.md  CHANGELOG_EN.md  LICENSE  README.md  README_CN.md  README_EN.md  VERSION_MANAGEMENT.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  version.json  vite.config.ts
.cursor/skills/resolve-pr-review/: SKILL.md
.cursor/skills/rust-no-unwrap/: SKILL.md
.cursor/skills/rust-sql-test/: SKILL.md
.github/workflows/: release.yml  test.yml
docs/: ROADMAP.md
fixtures/: orders.csv  users.csv  users.json  users.ndjson  users.parquet  users.tsv  users.xlsx
fixtures/glob/: users_a.csv  users_b.csv
homebrew/: OFFICIAL_CASK_PR.md  README.md
homebrew/Casks/: easydb.rb.template
homebrew/tap-seed/Casks/: easydb.rb
scripts/: generate-homebrew-cask.sh  submit-homebrew-cask-pr.sh  test-version.js  update-version.js
src/: App.tsx  commands.ts  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: generate-test-report.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  excel_cache.rs  greet.rs  mod.rs  query.rs  utils.rs
src-tauri/src/context/: context.rs  context_test.rs  error.rs  mod.rs  schema.rs
src-tauri/src/reader/: excel.rs  excel_test.rs  mod.rs
src-tauri/src/sql/: generator.rs  generator_test.rs  mod.rs  parse.rs
src-tauri/src/utils/: app_data_utils.rs  date_utils.rs  db_utils.rs  excel_cache.rs  excel_cache_test.rs  file_utils.rs  file_utils_test.rs  mod.rs
src-tauri/tests/: collect_test.rs
src/components/common/: about-modal.tsx  ace-editor.tsx  filter-list.tsx  settings-modal.tsx
src/contexts/: FontSizeContext.tsx  FontSizeContextTypes.ts  LanguageContext.tsx  LanguageContextTypes.ts  ThemeContext.tsx  ThemeContextTypes.ts
src/hooks/: useFontSize.ts  useLanguage.ts  useTheme.ts
src/i18n/: index.ts
src/types/: js-sql-parser.d.ts
src/utils/: date-util.ts  version.ts
vite-plugins/: version-plugin.ts
(+14 files in other folders)
