[package]
name = "easydb_app"
version = "0.1.0"
description = "EasyDB APP"
authors = ["shencangsheng"]
license = "MIT"
repository = "https://github.com/shencangsheng/easydb_app"
edition = "2021"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
polars = { version = "0.51.0", features = ["polars-time", "lazy", "temporal", "describe", "json", "parquet", "dtype-datetime", "sql", "serde-lazy", "default", "csv", "dtype-date", "dtype-time", "polars-sql", "polars-plan"] }
derive_more = { version = "2.0.1", features = ["full"] }
sqlparser = "0.54.0"
backtrace = "0.3.75"
calamine = { version = "0.30.1", features = ["dates"] }
glob = "0.3.3"
